@@ -1,3 +1,4 @@
+- open the chrooted .rpmdrake config file when using --env
 - rpmdrake:
   o enable to set 'noclean' option (#13522)
 
